--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,12 @@ services:
       - db
     env_file:
       - .env
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+    depends_on:
+      - backend
