--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,8 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true
