--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -5,10 +5,12 @@ FROM node:20
 WORKDIR /app
 
 # Copy files and install dependencies
-COPY . .
+COPY package*.json ./
 RUN npm install
-RUN npm run build
+COPY . .
 
 # Serve using Vite dev server
 EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"]
+
+# Start the application
+CMD ["npm", "run", "dev"]
