--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,5 +3,8 @@
         "slim/slim": "^4.14",
         "slim/psr7": "^1.7",
         "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.2"
     }
 }
