fix: improve Docker build stability and Composer installation
- Downgrade from PHP 8.4 to PHP 8.3 for better compatibility
- Add unzip dependency required by Composer
- Install Composer globally for cleaner setup
- Optimize Docker layer caching by copying composer files first
- Add --optimize-autoloader flag for better performance
- Use --no-dev flag to exclude development dependencies

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,12 +1,25 @@
-FROM php:8.4-cli
+FROM php:8.3-cli
 
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    unzip \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql
 
-COPY . /app
+# Install Composer globally
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN curl -sS https://getcomposer.org/installer | php && \
-    php composer.phar install
+# Copy composer files first for better caching
+COPY composer.json composer.lock ./
+
+# Install dependencies
+RUN composer install --no-dev --optimize-autoloader
+
+# Copy the rest of the application
+COPY . .
 
 CMD ["php", "-S", "0.0.0.0:8000", "-t", "public"]
