--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,5 +6,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
