--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy files and install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 
 # Serve using Vite dev server
