fix(docker): install dev dependencies in backend container
- Remove --no-dev flag from composer install to include PHPUnit
- Enables running unit tests inside Docker container
- Fixes "phpunit not found" error when running tests

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -17,7 +17,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 COPY composer.json composer.lock ./
 
 # Install dependencies
-RUN composer install --no-dev --optimize-autoloader
+RUN composer install --optimize-autoloader
 
 # Copy the rest of the application
 COPY . .
